# OpenCV_Object_Tracking

./: README.md  pyproject.toml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  ast.data.json  ast.meta.json  ball_tracking.data.json  ball_tracking.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
ball-tracking/: ball_tracking.py
